[gd_scene load_steps=3 format=3 uid="uid://cn17uqapvxn2f"]

[ext_resource type="Theme" uid="uid://dhjt02la7o8du" path="res://assets/Aletheia_theme.tres" id="1_jcxv1"]
[ext_resource type="Script" path="res://Daemons/ai_settings.gd" id="2_3smpe"]

[node name="AI Settings" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(512, 128)
theme = ExtResource("1_jcxv1")
script = ExtResource("2_3smpe")

[node name="LLMFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(1024, 512)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="EmbeddingFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(1024, 512)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_vertical = 6
text = "(Model status...)"
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LLMPathInput" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "example://models/llm_model.gguf"

[node name="LLMBrowseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "üìÅ Browse..."

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EmbeddingPathInput" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "example://models/embedding_model.gguf"

[node name="EmbeddingBrowseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "üìÅ Browse..."

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "üõ† Apply"
